--- a/css/style.css
+++ b/css/style.css
@@ -9879,7 +9879,7 @@ label.error {
 
 
 .touchMainBanner{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url(../images/furniture-3d/Mainbanner.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url(../images/2d&3d-floorplan/MainBanner.jpeg);
 	background-size: cover;
 }
 
